# portfolio5_sop

./: AbgabeSOP.txt  CMakeLists.txt  Makefile  README.md  new_wc
src/: main.c  main.h  wc_functions.c  wc_functions.h
src/TestFiles/: testText1.txt
tests/: test_args.c  test_wc_functions.c
